update styles and html files

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 		<h2 id="title">Pomodoro Study App</h2>
 
 		<div id="endTimeDiv">
-			<p id="endTimeDivPara">your study time has ended</p>
+			<p style="padding-top: 30px;">your study time has ended</p>
+			<hr>
+			<p style="padding-top: 55px;">you are now smarter than you once were!!!</p>
+			
 			<div class="heart"></div>
 
 		</div>
